# thouart

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: input.rs  lib.rs  raw.rs
tests/: tests.rs
