[package]
name = "thouart"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
libc = "0.2"
regex = "1"
thiserror = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt", "sync", "time"] }
tokio-tungstenite = "0.18.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "processenv", "wincon", "winnt"] }
